--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "dotenv": "^6.1.0",
+    "dotenv-webpack": "^1.5.7",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
